--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 16 17:51:29 IST 2019
-sdk.dir=/home/rishabh/Android/Sdk
+#Sat Mar 16 18:05:26 IST 2019
+sdk.dir=E\:\\Android files\\Sdk
