--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LogIn_Page" />
+        <activity android:name=".Profile.Profile"/>
 
         <activity android:name=".faculty" />
 
