--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".aboutus" />
         <activity android:name=".MainActivity" />
         <activity android:name=".chatroom.ChatRoom_studs" />
+        <activity android:name=".VerifyPhoneActivity"/>
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
