--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 16 18:05:26 IST 2019
-sdk.dir=E\:\\Android files\\Sdk
+#Sun Mar 17 00:15:52 IST 2019
+sdk.dir=C\:\\Users\\a1\\AppData\\Local\\Android\\Sdk
