--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".otpverification" />
         <activity android:name=".aboutus" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Notice.Notice"/>
         <activity android:name=".chatroom.ChatRoom_studs" />
         <activity android:name=".VerifyPhoneActivity"/>
         <activity
